--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^4.7.1",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
