--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-multi-carousel": "^2.6.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-social-icons": "^5.15.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
